# bitsgui

./: .prettierignore  README.md  README_EN.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: autofix-ci.yml  ci.yml  release.yml
src/: App.vue  main.ts  router.ts  state.ts  style.css  types.ts  utils.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: api.rs  auto_start.rs  lib.rs  main.rs
src/api/: index.ts  init.ts  store.ts
src/components/: AppFooter.vue  OverlayScrollbars.vue
src/views/: Login.vue  Status.vue
