[package]
name = "bitsgui"
description = "Simple login and logout app for 10.0.0.55 at BIT"
authors = ["Ray <i@mk1.io>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bitsgui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", default-features = true, features = [
	"devtools",
	"tray-icon",
] }
tauri-plugin-store = "2"
tauri-plugin-prevent-default = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bitsrun-lib = "0.3.0"
reqwest = { version = "0.12.24", features = [
	"json",
	"rustls-tls",
], default-features = false }
tauri-plugin-log = "2"
log = "0.4.28"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
